Fixed scrollbar bug on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,23 +4,24 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    scrollbar-width: none;
 }
 
 body {
     background-color: #494949;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 
 }
   
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     display: none;
 
 }
   
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     display: none;
 
 }
